--- a/locale/bg/LC_MESSAGES/django.po
+++ b/locale/bg/LC_MESSAGES/django.po
@@ -1282,5 +1282,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Китайски"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Току-що получихте награда за точки!"
+msgid "you_just_received_a_points_award"
+msgstr "Току-що получихте награда за точки!"
