--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -1293,5 +1293,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Κινέζικα"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Μόλις λάβατε ένα βραβείο πόντων!"
+msgid "you_just_received_a_points_award"
+msgstr "Μόλις λάβατε ένα βραβείο πόντων!"
