--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1284,8 +1284,8 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "You just received a points award!"
+msgid "you_just_received_a_points_award"
+msgstr "You just received a points award!"
 
 #~ msgid "Reports per page"
 #~ msgstr "Reports per page"
