--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -1293,5 +1293,5 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Vous venez de recevoir une récompense de points!"
+msgid "you_just_received_a_points_award"
+msgstr "Vous venez de recevoir une récompense de points!"
