--- a/locale/hr/LC_MESSAGES/django.po
+++ b/locale/hr/LC_MESSAGES/django.po
@@ -1283,5 +1283,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Kineski"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Upravo ste dobili nagradu za bodove!"
+msgid "you_just_received_a_points_award"
+msgstr "Upravo ste dobili nagradu za bodove!"
