--- a/locale/hu/LC_MESSAGES/django.po
+++ b/locale/hu/LC_MESSAGES/django.po
@@ -1283,5 +1283,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Kínai"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Most pontdíjat kapott!"
+msgid "you_just_received_a_points_award"
+msgstr "Most pontdíjat kapott!"
