--- a/locale/lb/LC_MESSAGES/django.po
+++ b/locale/lb/LC_MESSAGES/django.po
@@ -1284,5 +1284,5 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Dir krut grad e Punktepräis!"
+msgid "you_just_received_a_points_award"
+msgstr "Dir krut grad e Punktepräis!"
