--- a/locale/mk/LC_MESSAGES/django.po
+++ b/locale/mk/LC_MESSAGES/django.po
@@ -1288,6 +1288,5 @@ msgstr ""
 msgid "Chinese"
 msgstr " Кинески"
 
-#~| msgid "!Acabas de recibir una recompensa de puntos!"
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Само што добивте награда за поени!"
+msgid "you_just_received_a_points_award"
+msgstr "Само што добивте награда за поени!"
