--- a/locale/nl/LC_MESSAGES/django.po
+++ b/locale/nl/LC_MESSAGES/django.po
@@ -1288,5 +1288,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Chinees"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "U heeft zojuist een puntentoekenning ontvangen!"
+msgid "you_just_received_a_points_award"
+msgstr "U heeft zojuist een puntentoekenning ontvangen!"
