--- a/locale/ro/LC_MESSAGES/django.po
+++ b/locale/ro/LC_MESSAGES/django.po
@@ -1293,5 +1293,5 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Tocmai ai primit un premiu de puncte!"
+msgid "you_just_received_a_points_award"
+msgstr "Tocmai ai primit un premiu de puncte!"
