--- a/locale/sl/LC_MESSAGES/django.po
+++ b/locale/sl/LC_MESSAGES/django.po
@@ -1282,5 +1282,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Kitajščina"
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Pravkar ste prejeli točke!"
+msgid "you_just_received_a_points_award"
+msgstr "Pravkar ste prejeli točke!"
