--- a/locale/sq/LC_MESSAGES/django.po
+++ b/locale/sq/LC_MESSAGES/django.po
@@ -1281,6 +1281,5 @@ msgstr ""
 msgid "Chinese"
 msgstr "Kineze"
 
-#~| msgid "!Acabas de recibir una recompensa de puntos!"
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Sapo morët një çmim në formë pikësh!"
+msgid "you_just_received_a_points_award"
+msgstr "Sapo morët një çmim në formë pikësh!"
