--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -1279,5 +1279,5 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Az önce bir puan ödülü aldınız!"
+msgid "you_just_received_a_points_award"
+msgstr "Az önce bir puan ödülü aldınız!"
