Fixed missing resource key

--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -1295,8 +1295,8 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "Acabes de rebre una recompensa de punts!"
+msgid "you_just_received_a_points_award"
+msgstr "Acabes de rebre una recompensa de punts!"
 
 #~ msgid "Bite"
 #~ msgstr "Picades"
