--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -1296,8 +1296,8 @@ msgstr ""
 msgid "Chinese"
 msgstr ""
 
-#~ msgid "you_just_received_a_points_award"
-#~ msgstr "!Acabas de recibir una recompensa de puntos!"
+msgid "you_just_received_a_points_award"
+msgstr "!Acabas de recibir una recompensa de puntos!"
 
 #~ msgid "Bite"
 #~ msgstr "Picaduras"
