--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -1106,7 +1106,7 @@ msgstr "Unklar"
 
 #: tigaserver_app/models.py:1347
 msgid "species_culex"
-msgstr "Gemeine Hausmücke (Culex sp.)"
+msgstr "Gemeine Hausmücke (Culex pipiens)"
 
 #: tigaserver_app/models.py:1360
 msgid "species_value_possible"
