--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -1112,7 +1112,7 @@ msgstr "Δεν είναι ξεκάθαρο"
 
 #: tigaserver_app/models.py:1347
 msgid "species_culex"
-msgstr "κοινό κουνούπι (Culex sp.)"
+msgstr "κοινό κουνούπι (Culex pipiens)"
 
 #: tigaserver_app/models.py:1360
 msgid "species_value_possible"
