--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1105,7 +1105,7 @@ msgstr "Not sure"
 
 #: tigaserver_app/models.py:1347
 msgid "species_culex"
-msgstr "common house mosquito (Culex sp.)"
+msgstr "common house mosquito (Culex pipiens)"
 
 #: tigaserver_app/models.py:1360
 msgid "species_value_possible"
