--- a/locale/hu/LC_MESSAGES/django.po
+++ b/locale/hu/LC_MESSAGES/django.po
@@ -1104,7 +1104,7 @@ msgstr "Nem biztos"
 
 #: tigaserver_app/models.py:1347
 msgid "species_culex"
-msgstr "közönséges házi szúnyog (Culex sp.)"
+msgstr "közönséges házi szúnyog (Culex pipiens)"
 
 #: tigaserver_app/models.py:1360
 msgid "species_value_possible"
