--- a/locale/lb/LC_MESSAGES/django.po
+++ b/locale/lb/LC_MESSAGES/django.po
@@ -1105,7 +1105,7 @@ msgstr "Net sécher"
 
 #: tigaserver_app/models.py:1347
 msgid "species_culex"
-msgstr "Gewéinlech Hausmustik (Culex sp.)"
+msgstr "Gewéinlech Hausmustik (Culex pipiens)"
 
 #: tigaserver_app/models.py:1360
 msgid "species_value_possible"
